Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57076

[macOS] Submenu shortcuts in a QMenuBar doesn't work

XMLWordPrintable

    • macOS
    • 385589ef458715fcaa533bbd01ca421dc1040eba

      When you have a QMenuBar without a parent the submenu shortcuts don't work unless if you open the menu that contains the submenu which has some items with shortcuts.

      When the QMenuBar has a parent the shortcuts seem to work as long as the parent is not hidden, if the menu that contains the submenu which has some items with shortcuts is opened by the user then the shortcuts work even when the QMenuBars parent widget is hidden.

      Steps to reproduce the issue:
      1. Run attached test application from QTBUG-57076.tar.gz
      2. Press CMD+ALT+O
      3. Press CMD+ALT+L

      Expected outcome:
      Both shortcuts work

      Actual outcome:
      Only the shortcut on the first menu level works (CMD+ALT+O)

      (Issue not reproducible with example app from main.cpp. Left there for archival only.)

        1. QTBUG-57076.tar.gz
          1 kB
          Kimmo Leppälä
        2. main.cpp
          0.8 kB
          Gabriel de Dietrich (drgvond)
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dedietri Gabriel de Dietrich (drgvond)
            kkarvinen Kimmo Karvinen
            Votes:
            5 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes